# speedtest-rs

./: Cargo.toml
src/: speedtest.rs
