[package]
authors = ["Nelson Chen <nelson@mindflakes.com>"]
description = "Speedtest.net testing utility and crate"
exclude = ["tests/config/*"]
license = "MIT"
name = "speedtest-rs"
repository = "https://github.com/nelsonjchen/speedtest-rs"
version = "0.0.9"

[[bin]]
doc = false
name = "speedtest-rs"

[dependencies]
clap = "*"
env_logger = "*"
log = "*"
reqwest = "*"
rust-crypto = "*"
time = "*"
url = "*"
xml-rs = "*"
